--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
-    "zustand": "^4.5.1"
+    "zustand": "^4.5.1",
+    "@shopify/flash-list": "1.7.6",
+    "lottie-react-native": "7.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
